--- a/code/Fanastong.html
+++ b/code/Fanastong.html
@@ -77,6 +77,6 @@ void main()
 <canvas id="gl-canvas" width="512" height="512">
 Oops ... your browser doesn't support the HTML5 canvas element
 </canvas>
-<img id = "texImage" src = "Island.jpg" hidden></img>
+<img id = "texImage" src = "France.jpg" hidden></img>
 </body>
 </html>
